<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>recommender</artifactId>
	<packaging>war</packaging>
	<name>TeaStore Recommender</name>
	<url>http://descartes.tools</url>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<!-- Internal Dependencies -->
		<dependency>
			<groupId>tools.descartes.teastore</groupId>
			<artifactId>registryclient</artifactId>
			<version>${teastoreversion}</version>
		</dependency>

		<!-- WebApp Dependencies -->
		<!-- All inherited from registryclient. -->

		<!-- Dependencies only needed for compilation -->
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>7.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test Dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-core</artifactId>
			<version>8.5.24</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
			<version>8.5.24</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock</artifactId>
			<version>2.7.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.fusesource</groupId>
			<artifactId>sigar</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>com.rabbitmq</groupId>
			<artifactId>amqp-client</artifactId>
			<version>5.0.0</version>
		</dependency>
	</dependencies>
	<build>
		<finalName>tools.descartes.teastore.recommender</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20.1</version>
				<configuration>
					<reuseForks>false</reuseForks>
					<forkCount>1</forkCount>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>docker</id>
			<activation>
				<property>
					<name>kieker</name>
				</property>
				<activeByDefault>false</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>tools.descartes.teastore</groupId>
					<artifactId>dockerbase</artifactId>
					<version>${teastoreversion}</version>
					<type>pom</type>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.0.2</version>
						<executions>
							<execution>
								<id>copy-dockerfile</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.basedir}</outputDirectory>
									<overwrite>true</overwrite>
									<resources>
										<resource>
											<directory>../../utilities/tools.descartes.teastore.dockerbase/ServiceDockerfile/</directory>
											<includes>
												<include>Dockerfile</include>
											</includes>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.spotify</groupId>
						<artifactId>dockerfile-maven-plugin</artifactId>
						<version>1.3.6</version>
						<executions>
							<execution>
								<id>build-image</id>
								<goals>
									<goal>build</goal>
								</goals>
								<phase>package</phase>
							</execution>
							<execution>
								<id>tag-push-version</id>
								<goals>
									<goal>tag</goal>
									<goal>push</goal>
								</goals>
								<configuration>
									<repository>${dockerrepository}/teastore-recommender</repository>
									<tag>${project.version}-softee</tag>
								</configuration>
								<phase>package</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>kieker</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>tools.descartes.teastore</groupId>
					<artifactId>kieker.probes</artifactId>
					<version>${teastoreversion}</version>
				</dependency>
			</dependencies>
			<build>
				<!-- RENAME DOCKER FILE -->
				<plugins>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.0.2</version>
						<executions>
							<!-- COPY MONITORING.PROPERTIES -->
							<execution>
								<id>copy-monitoring</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.basedir}</outputDirectory>
									<overwrite>true</overwrite>
									<resources>
										<resource>
											<directory>../../utilities/tools.descartes.teastore.kieker/</directory>
											<includes>
												<include>kieker.monitoring.properties</include>
												<include>Dockerfile</include>
												<include>start_kieker.sh</include>
											</includes>
										</resource>
									</resources>
								</configuration>
							</execution>
							<!-- COPY aop.xml -->
							<execution>
								<id>copy-aop</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.basedir}/src/main/resources</outputDirectory>
									<overwrite>true</overwrite>
									<resources>
										<resource>
											<directory>../../utilities/tools.descartes.teastore.kieker/</directory>
											<includes>
												<include>aop.xml</include>
											</includes>
										</resource>
									</resources>
								</configuration>
							</execution>
							<!-- COPY KIEKER LIBRARIES -->
							<execution>
								<id>copy-appCtx</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/lib</outputDirectory>
									<overwrite>true</overwrite>
									<resources>
										<resource>
											<directory>../../utilities/tools.descartes.teastore.kieker/src/main/webapp/WEB-INF/lib</directory>
											<includes>
												<include>libsigar-amd64-linux.so</include>
												<include>libsigar-x86-linux.so</include>
												<include>sigar-1.6.4.LICENSE</include>
												<include>kieker-1.14-SNAPSHOT-aspectj.jar</include>
											</includes>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<!-- EDIT WEB.XML -->
					<plugin>
						<groupId>io.github.michaldo</groupId>
						<artifactId>nashorn-maven-plugin</artifactId>
						<version>0.0.1</version>
						<executions>
							<execution>
								<phase>process-resources</phase>
								<configuration>
									<script>
										var Files = Java.type('java.nio.file.Files');
										var Paths
										= Java.type('java.nio.file.Paths');
										var content = new
										java.lang.String(Files.readAllBytes(Paths.get($basedir+'/src/main/webapp/WEB-INF/web.xml')));
										var insert = new
										java.lang.String(Files.readAllBytes(Paths.get($basedir+'/../../utilities/tools.descartes.teastore.kieker/src/main/webapp/WEB-INF/web_kieker.txt')));

										content = content.replaceAll("./web-app>", '') + insert;
										Files.write(Paths.get($basedir +
										'/src/main/webapp/WEB-INF/web.xml'), content.getBytes());
									</script>
								</configuration>
								<goals>
									<goal>eval</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<!-- BUILD DOCKER -->
					<plugin>
						<groupId>com.spotify</groupId>
						<artifactId>dockerfile-maven-plugin</artifactId>
						<version>1.3.6</version>
						<executions>
							<execution>
								<id>build-image</id>
								<goals>
									<goal>build</goal>
								</goals>
								<phase>package</phase>
							</execution>
							<execution>
								<id>tag-push-version</id>
								<goals>
									<goal>tag</goal>
									<goal>push</goal>
								</goals>
								<configuration>
									<repository>${dockerrepository}/teastore-recommender-kieker</repository>
									<tag>${project.version}-softee</tag>
								</configuration>
								<phase>package</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<parent>
		<groupId>tools.descartes.teastore</groupId>
		<artifactId>parent</artifactId>
		<version>${teastoreversion}</version>
		<relativePath>../..</relativePath>
	</parent>
</project>
